fixed some margins to fit components on tablet view

--- a/starter-code/styles/style.css
+++ b/starter-code/styles/style.css
@@ -91,14 +91,36 @@ h1 {
 /* Tablet view */
 
 @media (min-width: 48em) {
+
+.logo-container {
+  margin-top: 3.5rem;
+  margin-bottom: 2rem;
+}
   
 .logo {
   margin: 0;
+  padding: 0;
 }
 
-.body {
-  background-image: none;
+body {
+
   background-color: var(--clr-black);
+  background-image: url('../assets/mobile/image-host.jpg');
+  background-position: top right;
+  background-repeat: no-repeat;
+  background-size: 520px 789px;
+  overflow-y: hidden;
+}
+
+.container {
+  padding: 0 2rem;
+  z-index: 99;
+}
+
+.info-box {
+  background-color: var(--clr-black);
+  width: 90%;
+  padding: 30px 0;
 }
 
 h1 {
@@ -122,27 +144,27 @@ h1 {
 }
 
 .email_address {
-  width: 70%;
+  width: 55%;
   position: relative;
 }
 
 .submit {
-  width: 30%;
+  width: 25%;
   position: absolute;
-  margin-left: 284px;
+  margin-left: 213px;
 }
 
 .providers {
-  margin-top: 3rem;
+  margin-top: 0.125rem;
 }
 
 .providers li {
-  margin-right: 50px;
+  margin-right: 20px;
 }
 
 .dots {  
   display: flex;
-  margin-top: 4rem;
+  /* margin-top: 1rem; */
 }
 
 }
